--- a/views/movies.hbs
+++ b/views/movies.hbs
@@ -28,12 +28,12 @@
 
             {{!-- For each row, print the id, first_name, last_name, etc, in order --}}
             {{#each data}}
-            <tr data-value = {{this.movie_id}}>
-                <td>{{this.movie_id}}</td>
-                <td>{{this.movie_title}}</td>
-                <td>{{this.release_date}}</td>
-                <td>{{this.genre}}</td>
-                <td><button onclick="deleteMovie({{this.movie_id}})">Delete</button></td>                                                   
+            <tr data-value = {{this.[ID]}}>
+                <td>{{this.[ID]}}</td>
+                <td>{{this.[Title]}}</td>
+                <td>{{this.[Year of Release]}}</td>
+                <td>{{this.[Genre]}}</td>
+                <td><button onclick="deleteMovie({{this.[ID]}})">Delete</button></td>                                                   
             </tr>
             {{/each}}
         </tbody>
@@ -84,7 +84,7 @@
                     <select name="update-movie_title" id="movieSelect">
                       <option value="update-order-id">Select a Movie</option>
                         {{#each data}}
-                        <option value="{{this.movie_id}}">{{this.movie_title}}</option>
+                        <option value="{{this.[ID]}}">{{this.[Title]}}</option>
                         {{/each}}
                     </select>
                 </div>
