--- a/views/index.hbs
+++ b/views/index.hbs
@@ -94,12 +94,12 @@
 
                 <div>
                     <label for="input-active-rentals">Active Rentals: </label>
-                    <input type="number" name="input-active-rentals" id="input-active-rentals">
+                    <input type="number" value="0" name="input-active-rentals" id="input-active-rentals">
                 </div>
 
                 <div>
                     <label for="input-total-rentals">Total Rentals: </label>
-                    <input type="number" name="input-total-rentals" id="input-total-rentals">
+                    <input type="number" value="0" name="input-total-rentals" id="input-total-rentals">
                 </div>
 
                 <input type="submit" value="Add Customer">
@@ -157,12 +157,12 @@
 
                 <div>
                     <label for="input-update-active-rentals">Active Rentals: </label>
-                    <input type="number" name="input-update-active-rentals" id="input-update-active-rentals">
+                    <input type="number" value="0" name="input-update-active-rentals" id="input-update-active-rentals">
                 </div>
 
                 <div>
                     <label for="input-update-total-rentals">Total Rentals: </label>
-                    <input type="number" name="input-update-total-rentals" id="input-update-total-rentals">
+                    <input type="number" value="0" name="input-update-total-rentals" id="input-update-total-rentals">
                 </div>
                 
                 <input type="submit" value= "Update Customer">
