--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -58,7 +58,7 @@
                     <select name="input-customer-id" id="input-customer-id" required="required" >
                         <option value="">Select a Customer</option>
                         {{#each customers}}
-                        <option value="{{this.customer_id}}">{{this.customer_id}} </option>
+                        <option value="{{this.customer_id}}">{{this.first_name}} {{this.last_name}} </option>
                         {{/each}}
                     </select>
                 </div>
