Added link to Reload Database

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -24,6 +24,7 @@
         <a href='../movies' action='../movies'>Movies</a> | 
         <a href='../available_rentals' action='../available_rentals'>Available Rentals</a> | 
         <a href='../locations' action='../locations'>Locations</a> | 
+        <a href='../reload_database' action='../reload_database'>Reload Database</a> | 
     </nav>
 
 
